<resources>
    <string name="app_name">HypaShip</string>

    <string name="username_hint">Username</string>
    <string name="depo_hint">Depo number</string>
    <string name="password_hint">Password</string>
    <string name="terms_sign_in">By signing in, you agree to our <u>terms of use</u></string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="missing_field">One of the fields is missing.</string>
    <string name="incorrect_field">One of the fields is incorrect(length should be at least 3).</string>

    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_home">Set-up</string>
    <string name="menu_jobs">Job List</string>
    <string name="menu_memos">Memos</string>
    <string name="menu_load_vehicle">Load Vehicle</string>
    <string name="menu_return_depot">Return to Depot</string>
    <string name="menu_summary">Summary</string>
    <string name="logout_confirm">Are you sure you want to log out?</string>
    <string name="download_manifest">Download Manifest</string>
    <string name="new_manifest">A new manifest is available</string>
    <string name="download">DOWNLOAD</string>
    <string name="load_vehicle">Load Vehicle</string>
    <string name="scan_load">SCAN LOAD</string>
    <string name="scan_load">SCAN LOAD</string>
    <string name="start_job_list">Start Job List</string>
    <string name="start_job">START JOBS</string>
</resources>
