<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_rounded_popup"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:layout_centerInParent="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/download_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/download_manifest"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/download_image">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_manifest"
                android:textSize="22dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_manifest"
                android:textSize="16dp"/>

            <Button
                android:id="@+id/download_manifest_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download"
                android:textColor="@android:color/white"
                android:background="@drawable/green_rounded_button"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="20sp"
                />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/scan_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/load_vehicle"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/scan_image">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_vehicle"
                android:textSize="22dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_manifest"
                android:textSize="16dp"/>

            <Button
                android:id="@+id/scan_load_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_load"
                android:textColor="@android:color/white"
                android:background="@drawable/blue_rounded_button"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="20sp"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/job_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/job_list"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/job_image">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_job_list"
                android:textSize="22dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_manifest"
                android:textSize="16dp"/>

            <Button
                android:id="@+id/start_jobs_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_job"
                android:textColor="@android:color/white"
                android:background="@drawable/blue_rounded_button"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="20sp"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>