<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background">

    <LinearLayout
        android:id="@+id/login_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_rounded_popup"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerInParent="true"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/hs_icon"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/username_txt_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_black_24px"
            android:hint="@string/username_hint"
            android:textColorHint="@color/gray_text"
            android:textColor="@color/dark_text"
            android:inputType="text"
            android:drawablePadding="10dp"
            android:background="@drawable/edit_text_no_underline"
            android:paddingBottom="15dp"
            />

        <EditText
            android:id="@+id/depo_nr_txt_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_place_black_24px"
            android:hint="@string/depo_hint"
            android:textColorHint="@color/gray_text"
            android:textColor="@color/dark_text"
            android:inputType="number"
            android:drawablePadding="10dp"
            android:background="@drawable/edit_text_no_underline"
            android:paddingBottom="15dp"
            />

        <EditText
            android:id="@+id/password_txt_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/combined_shape"
            android:hint="@string/password_hint"
            android:textColorHint="@color/gray_text"
            android:textColor="@color/dark_text"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:background="@drawable/edit_text_no_underline"
            android:paddingBottom="15dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_sign_in"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_button"
            android:textColor="@android:color/white"
            android:background="@drawable/blue_rounded_button"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/splash_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:src="@drawable/hs_icon" />
    </RelativeLayout>
</RelativeLayout>
